--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.companyname.automobile</groupId>
-  <artifactId>leadapp</artifactId>
+  <artifactId>trucks</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>trucks Maven Webapp</name>
@@ -16,22 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>leadapp</finalName>
-	
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.0</version>
-		</plugin>
-	
-	
-		<plugin>
-			<groupId> org.apache.maven.plugins</groupId>
-			<artifactId> maven-surefire-plugin</artifactId>
-			<version>2.11</version>
-		</plugin>	
-	</plugins>
-  
+    <finalName>trucks</finalName>
   </build>
 </project>
